--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,29 @@ repositories {
 }
 
 dependencies {
+    implementation 'junit:junit:4.13.1'
+    implementation 'org.testng:testng:7.1.0'
+    implementation 'org.testng:testng:7.1.0'
+    implementation 'junit:junit:4.13.1'
+    implementation 'org.testng:testng:7.1.0'
+
+    // Junit dependence
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+
+            // https://mvnrepository.com/artifact/org.mockito/mockito-core
+            testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.12.4'
+//Log4j dependency
+    dependencies {
+        //Log4j
+        implementation  group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
+        implementation  group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.1'
+        implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.17.1'
+    }
+    //-----postgres dependency
+    // https://mvnrepository.com/artifact/org.postgresql/postgresql
+    implementation 'org.postgresql:postgresql:42.3.1'
+
 }
 
 test {
