--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ dependencies {
     // https://mvnrepository.com/artifact/org.postgresql/postgresql
     implementation 'org.postgresql:postgresql:42.3.1'
 
+    implementation group: 'io.javalin', name: 'javalin', version: '4.3.0'
+    //implementation 'io.javalin : javalin : 4.3.0'
+
 }
 
 test {
