--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,13 @@ dependencies {
     implementation 'org.postgresql:postgresql:42.3.1'
 
     implementation group: 'io.javalin', name: 'javalin', version: '4.3.0'
-    //implementation 'io.javalin : javalin : 4.3.0'
+//    implementation 'org.slf4j:slf4j-simple:1.7.31'
+//    implementation 'com .fasterxml.jackson.core:jackson-databind:2.12.4'
+
+    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.0'
+
+
 
 }
 
